REFACTOR: NAV-16 - Minor cleanup and tuning of generator parameters.